@@ -9,8 +9,11 @@
   and added correctly to the ExtensionElements
 - added ACL support. This resulted in changes in the CalendarService.Query method - as a CalendarService
   can now return an EventFeed or an AccessControlFeed is returns now an AtomFeed that you can cast to what
-  you are expecting.
+  you are expecting. Added Query overloads to accept EventQuery or AclQuery and return the appropriate 
+  Feeds
 - added a cmd line tool to query/insert/update to a service based on streams
+- modified the Spreadsheet service to use the new scheme of service subclassing. This should fix a bundle of issues
+  with regard to entry castings.
 
 == 1.0.9.7 ==
 - fixed an incorrect trace statement in request.cs that had the result of disabling reading the error response.
